--- a/src/js/components/presentational/presentational.css
+++ b/src/js/components/presentational/presentational.css
@@ -1,8 +1,21 @@
-.page__header{
+.header{
     background-color:#B1B2B7;
     height: 45px;
     display: flex;
     justify-content: center;
     align-items: center
 
+}
+.footer{
+    display: flex;
+    justify-content: flex-end;
+    width: 90%;
+    position:absolute;
+    bottom:10px; 
+}
+.footer__image{
+
+    height: 30px;
+    width: 30px;
+    
 }
