--- a/src/js/components/container/container.css
+++ b/src/js/components/container/container.css
@@ -3,3 +3,11 @@
     height: 500px;
     border: 1px solid black;
 }
+.content__displaynone{
+
+    display: none;
+}
+.content__displayinline{
+
+    display: inline
+}
