--- a/src/js/components/presentational/presentational.css
+++ b/src/js/components/presentational/presentational.css
@@ -7,17 +7,23 @@
 
 }
 .footer{
-    display: flex;
-    justify-content: flex-end;
-    width: 91%;
+    
     position:absolute;
     bottom:3px; 
+    right: 20px;
 }
 .footer__image{
 
     height: 30px;
     width: 30px;
     
+}
+.cancel__image{
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 9px;
+    left: 20px  
 }
 .control__displaynone{
 
@@ -26,4 +32,20 @@
 .control__displayinline{
 
     display: inline
+}
+.post{
+
+  position: absolute;
+  top:20;
+  right: 20px;
+  border-radius: 10px;
+  height: 30px;
+
+}
+.post__button{
+
+    width:80px;
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 30px;
 }
