--- a/src/js/components/presentational/presentational.css
+++ b/src/js/components/presentational/presentational.css
@@ -49,3 +49,13 @@
     border-radius: 10px;
     height: 30px;
 }
+.delete{
+
+    position: absolute;
+    bottom:3px; 
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
